<resources>
    <string name="app_name">CSC Price Widget</string>
    <string name="welcome_to_unofficial_csc_widget"> <b> Welcome to Unofficial CSC Widget </b></string>
    <string name="select_currency">Select Currency:</string>
    <string name="btc">BTC</string>
    <string name="usd">USD</string>
    <string name="btc_fa">&#xf15a;</string>
    <string name="noicon">NO ICON</string>
    <string name="selectfc">Select Font Color:</string>
    <string name="selectico">Select Icon:</string>
    <string name="fontcolor">Font</string>
    <string name="backgroundcolor">Background</string>
    <string name="selectbackground">Select Background Color</string>
    <string name="buymebeer">Buy Me a Beer</string>
    <string name="toast_copied">Copied! <b>*** Thank you *** </b> </string>
    <string name="save">SAVE</string>
</resources>
