<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="6dp"
            android:scaleType="center"
            android:src="@drawable/casinocoin_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/cscred"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/welcome_to_unofficial_csc_widget"
            android:textColor="@color/mainBackground"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/default_value"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginEnd="@dimen/default_value"
                android:layout_marginStart="@dimen/default_value"
                android:layout_marginTop="@dimen/default_value"
                android:layout_weight="1"
                android:text="@string/select_currency"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/BTC"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:background="@drawable/layout_roundcor"
                android:padding="@dimen/half_default_value"
                android:text="@string/btc"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/USD"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/layout_roundcor"
                android:padding="@dimen/half_default_value"
                android:text="@string/usd"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/default_value"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_marginEnd="@dimen/default_value"
                android:layout_marginStart="@dimen/default_value"
                android:layout_marginTop="@dimen/default_value"
                android:layout_weight="1"
                android:text="@string/selectico"
                android:textColor="@color/mainColor"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/iconOne"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@color/mainBackground"
                android:scaleType="centerCrop"
                android:src="@drawable/icon" />

            <ImageButton
                android:id="@+id/iconTwo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="@dimen/half_default_value"
                android:background="@color/cscred"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_white" />

            <TextView
                android:id="@+id/noIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/half_default_value"
                android:text="@string/noicon"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_value"
            android:layout_marginStart="@dimen/default_value"
            android:layout_marginTop="@dimen/default_value"
            android:text="@string/selectfc"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fontColor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/cscred"
            android:gravity="center"
            android:padding="@dimen/half_default_value"
            android:text="@string/fontcolor"
            android:textColor="@color/mainBackground"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_value"
            android:layout_marginStart="@dimen/default_value"
            android:layout_marginTop="@dimen/default_value"
            android:text="@string/selectbackground"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/panelColor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/cscred"
            android:baselineAligned="false"
            android:gravity="center"
            android:padding="@dimen/half_default_value"
            android:text="@string/backgroundcolor"
            android:textColor="@color/mainBackground"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_value"
            android:layout_marginStart="@dimen/default_value"
            android:layout_marginTop="@dimen/default_value"
            android:gravity="center"
            android:text="@string/buymebeer"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/spade"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/heart_icon" />

        <TextView
            android:id="@+id/xxx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_default_value"
            android:gravity="center"
            android:text="cKxv2YDfVRgcX9eVQBRtfVwwEEKgofvKjH"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/default_value"
            android:background="@color/cscred"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/mainBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
